# ssca1

./: .clang-format  CMakeLists.txt  gen_scal_data.c  gen_sim_matrix.c  glibc_sort.c  main.c  pairwise_align.c  parameters.c  scan_backwards.c  util.c
cmake/: FindGPI2.cmake
include/: gen_scal_data.h  gen_sim_matrix.h  pairwise_align.h  parameters.h  sort.h  types.h  util.h
